--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "reset-css": "^2.2.0"
   },
   "devDependencies": {
