--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reset-css": "^2.2.0"
   },
   "devDependencies": {
+    "enzyme": "^2.8.2",
     "react-scripts": "0.9.5"
   },
   "scripts": {
