added env variable for api

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@
 
  deploy:
    provider: script
-   script: netlify deploy -s $NETLIFY_SITE_ID -t $NETLIFY_ACCESS_TOKEN -p ./build
+   script: REACT_APP_API_BASE_URL=$API_URL netlify deploy -s $NETLIFY_SITE_ID -t $NETLIFY_ACCESS_TOKEN -p ./build
    skip_cleanup: true
    on:
      branch: master
